fixed the body overflow

--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 body {
 	margin: 0px;
 	padding: 0px;
-	overflow: scroll;
+	overflow: hidden;
 }
 section {
 	width: 300px;
